
    o	system.time() has a new argument 'gcFirst' which, when TRUE,
	forces a garbage collection before timing begins.

    o	There is now a coef() method for summaries of "nls" objects.

    o	ftable.formula() now looks for variables in the environment of
	the formula before the usual search path.

    o	.Defunct() now has 'new' and 'package' arguments like those of
	.Deprecated(). 


UTILITIES




C-LEVEL FACILITIES

    o	The header Rmath.h contains a definition for R_VERSION_STRING
	which can be used to track different versions of R and libRmath.

    o	The Makefile in src/nmath/standalone now has 'install' and
	'uninstall' targets -- see the README file in that directory.


DEPRECATED & DEFUNCT

    o	Direct use of R INSTALL|REMOVE|BATCH|COMPILE|SHLIB has been
	removed: use R CMD instead.

    o	La.eigen(), tetragamma(), pentagamma(), package.contents() and
	package.description() are defunct.

    o	The undocumented function newestVersion() is no longer exported
	from package utils.  (Mainly because it was not completely general.)

    o	If --enable-R-shlib is specified, a copy of libR is still
	installed in $R_HOME/bin, but this will be removed in the near
	future.	 Use that in R_HOME/lib instead.

    o	C-level entry point ptr_R_GetX11Image has been removed, as it
	was replaced by R_GetX11Image at 1.7.0.

    o	The undocumented C-level entry point R_IsNaNorNA has been
	removed.  It was used in a couple of packages, and should be
	replaced by a call to the documented macro ISNAN.

    o   The gnome/GNOME graphics device is now defunct.


INSTALLATION CHANGES

    o	Arithmetic supporting +/-Inf, NaNs and the IEC 60559 (aka
	IEEE 754) standard is now required -- the partial and often
	untested support for more limited arithmetic has been removed.

	The C99 macro isfinite is used in preference to finite if available
	(and its correct functioning is checked at configure time).

	Where isfinite or finite is available and works, it is used as