@@ -112,7 +112,12 @@ NEW FEATURES
 	the formula before the usual search path.
 
     o	.Defunct() now has 'new' and 'package' arguments like those of
-	.Deprecated(). 
+	.Deprecated().
+
+    o	reorder.dendrogram() now has a 'agglo.FUN' argument for
+	specification of a weights agglomeration function.
+
+    o	readChar() can now read strings with embedded nuls.
 
 
 UTILITIES
@@ -370,12 +375,15 @@ BUG FIXES
     o	stats:::as.dendrogram.hclust() is documented and no longer re-sorts
 	the two children at each node.	This fixes as.dendrogram(hh) for
 	the case where hh is a "reordered" hclust object.
+	plot.dendrogram(x) now draw leaves 'x' more sensibly.
+	reorder.dendrogram() now results in a dendrogram with correct
+	"midpoint"s, and hence reordered dendrograms are plotted correctly.
 
     o	heatmap(*, labRow=., labCol=.) now also reorders the labels when
 	specified---not only when using default labels.
 
     o   Copying lattice (grid) output to another device now works again
-        (There were intermittent problems in 1.9.0 - PR#6915, #6947/8.)  
+        (There were intermittent problems in 1.9.0 - PR#6915, #6947/8.)
 
     o	hist() uses a more robust choice of its 'diddle' factor, used
 	to detect if an observation is on a bin boundary.  (PR#6931)
@@ -383,9 +391,10 @@ BUG FIXES
     o	jitter(x) now returns x when length(x) == 0.
 
     o	Under some rare circumstances the locale-specific tables used by
-	the perl=TRUE option to grep etc were being corrupted and so 
+	the perl=TRUE option to grep etc were being corrupted and so
 	matches were missed.
 
+    o	qbinom(*, prob = 0, lower.tail = FALSE) now properly gives 0 (PR#6972).
 
 
 		CHANGES IN R VERSION 1.9.0
